[project]
name = "nemo-insights-plugin"
version = "0.1.0"
description = "Agent telemetry analysis and persistent insights for NeMo Platform."
requires-python = ">=3.11,<3.15"
dependencies = [
  "fastapi>=0.115",
  "genai-prices==0.0.62",
  "httpx",
  "nemo-platform",
  "nemo-platform-plugin",
  "opentelemetry-exporter-otlp>=1.42.1",
  "opentelemetry-sdk>=1.42.1",
  "pydantic>=2.10.6",
  "pydantic-ai-harness[code-mode]==0.3.0",
  "pydantic-ai-slim[anthropic]==1.105.0",
  "pyyaml>=6.0.3",
  "typer>=0.20.0",
  "tzdata==2026.2",
]

[project.entry-points."nemo.cli"]
insights = "nemo_insights_plugin.cli:InsightsCLI"

[project.entry-points."nemo.services"]
insights = "nemo_insights_plugin.service:InsightsService"

[project.entry-points."nemo.controllers"]
insights-analysis = "nemo_insights_plugin.controller:InsightsAnalysisController"

[project.entry-points."nemo.jobs"]
"insights.analyze-job" = "nemo_insights_plugin.jobs.analyze:AnalyzeJob"

[project.entry-points."nemo.sdk"]
insights = "nemo_insights_plugin.sdk:insights_sdk_resources"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nemo_insights_plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.uv.sources]
nemo-platform = { workspace = true }
nemo-platform-plugin = { workspace = true }
