[project]
name = "nemo-switchyard"
version = "0.1.0"
description = "Switchyard inference middleware plugin for NeMo Inference Gateway — routing, translation, and request filtering."
requires-python = ">=3.11,<3.15"
dependencies = [
    "nemo-platform-plugin",
    "switchyard",
]

[tool.uv.sources]
# Vendored snapshot of switchyard at commit 9407922 — see vendor/switchyard/README.md.
# Swap to a git submodule once CI has reliable access to the upstream repo.
switchyard = { path = "vendor/switchyard", editable = true }

[project.entry-points."nemo.inference_middleware"]
nemo-switchyard = "nemo_switchyard.middleware:SwitchyardMiddleware"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nemo_switchyard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
