[project]
name = "nmp-automodel"
description = "NeMo Automodel job compiler and platform tasks (no HTTP server)."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "nmp-common",
    "nmp-customization-common",
    "nemo-platform-plugin",
    "nemo-platform-sdk",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.6.1",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "tenacity>=8.5.0",
    "jsonschema>=4.23.0",
]
version = "0.0.0"

[project.optional-dependencies]
dev = ["pytest>=8.3.4", "pytest-asyncio>=0.25.3", "pytest-mock>=3.14.0"]

[project.scripts]
nmp-automodel-training = "nmp.automodel.tasks.training.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nmp"]


[tool.uv.sources]
nmp-common = { workspace = true }
nmp-customization-common = { workspace = true }
nemo-platform-plugin = { workspace = true }
nemo-platform-sdk = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

