[project]
name = "nmp-evaluator"
version = "0.0.1"
description = "The NeMo Evaluation Microservice is the one stop shop for evaluation needs as part of the NeMo Platform ecosystem"
readme = "README.md"
requires-python = ">=3.11,<3.14"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Human Machine Interfaces",
  "Topic :: Software Development",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11"
]

dependencies = [
  # All evaluator runtime dependencies - evaluator doesn't have clean API/task separation
  # so all deps are needed for the service to start
  "fastapi[standard]>=0.115.4",
  "pydantic>=2.10.3",
  "pydantic-settings>=2.6.1",
  "uvicorn<1.0.0.0,>=0.24.0-post.0",
  "starlette<1.0.0,>=0.52.1",
  "requests<3.0.0,>=2.31.0",
  "base58<3.0.0,>=2.1.1",
  "opentelemetry-distro>=0.48b0,<1.0",
  "opentelemetry-exporter-otlp>=1.27.0",
  "sqlmodel<1.0.0,>=0.0.14",
  "psycopg2-binary<3.0.0,>=2.9.9",
  "alembic<2.0.0,>=1.13.1",
  "python-box>=7.3.2",
  "jsonpath-ng>=1.6.0",
  "nmp-common",
  # Task deps that are imported at startup
  "aiofiles>=25.1.0",
  "aiohttp>=3.13.4",
  "datasets>=3.3.1",
  "huggingface-hub>=1.0.1,<2.0.0",
  "kubernetes>=31.0.0",
  "openai>=1.61.0",
  "ragas==0.3.5",
  "langchain-community>=0.3.27,<0.4",
  "pymilvus==2.6.9",
  "langchain-nvidia-ai-endpoints>=1.0.0,<2.0.0",
  "nemo-evaluator-sdk",
]

[project.scripts]
evaluator-server = "nmp.evaluator.main:run_standalone"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nmp"]

[dependency-groups]
# Task deps are all in main dependencies now since evaluator imports them at startup

dev = [
  "aioresponses>=0.7.8",
  "flake8<7.0.0,>=6.1.0",
  "pre-commit<4.0.0,>=3.5.0",
  "ipython<9.0.0,>=8.17.2",
  "ipdb<1.0.0,>=0.13.13",
  "responses<1.0.0,>=0.24.1",
  "pytest>=9.0.3, <10.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "httpx<1.0.0,>=0.26.0",
  "pytest-mock<4.0.0,>=3.14.0",
  "pytest-subtests>=0.13.1",
  "pytest-httpserver",
  "nmp-testing",
]

[tool.black]
line-length = 99
exclude = '''
(
^alembic/versions         # autogenerated code
)
'''

[tool.isort]
line_length = 99
profile = "black"
skip_glob = ["alembic/versions/*"]

[tool.pytest]
plugins = ["pytest-cov"]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" }
]

[tool.uv.sources]
nmp-common = {workspace = true}
nmp-testing = {workspace = true}
nemo-evaluator-sdk = {workspace = true}
