[project]
name = "nmp-hello-world"
description = "Hello World service for NeMo Platform"
requires-python = ">=3.11,<3.15"

dependencies = [
  # API server dependencies (lightweight - for nmp-api/nmp-core containers)
  "fastapi[standard]>=0.115.4",
  "uvicorn[standard]>=0.12.0",
  "nmp-common",
]
version = "0.0.0"

[project.scripts]
hello-world-server = "nmp.hello_world.main:run_standalone"

[tool.uv.sources]
nmp-common = { workspace = true }
nmp-testing = { workspace = true }


[dependency-groups]
# Task execution dependencies (for nmp-cpu-tasks container - demo task)
task = [
  "requests",
  "nmp-common",
]

dev = [
  "pytest>=8.3.3",
  "nmp-testing",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nmp"]
