[project]
name = "nmp-intake"
description = "Intake service for NeMo Platform - ingesting and reading spans, traces, annotations, and evaluator results"
readme = "README.md"
requires-python = ">=3.11,<3.15"

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    # API server dependencies (for nmp-api/nmp-core containers)
    # Intake has no separate task containers - all deps are API deps
    "fastapi>=0.115.5, <1.0.0",
    "uvicorn>=0.22.0, <1.0.0",
    "pydantic>=2.9.2, <3.0.0",
    "pydantic-settings>=2.6.1, <3.0.0",
    "nmp-common",
    "clickhouse-connect>=0.7,<1.0",
    "opentelemetry-proto>=1.27.0",
]
version = "0.0.0"

[project.scripts]
intake-server = "nmp.intake.main:run_standalone"

[dependency-groups]
# Intake has no separate task containers - all deps are in main dependencies

dev = [
    "nmp-testing",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0, <2.0.0",
    "pytest-env>=1.1.5, <2.0.0",
    "flake8>=6.1.0, <7.0.0",
    "isort>=5.12.0, <6.0.0",
    "mypy>=1.13.0, <2.0.0",
    "pre-commit>=3.7.1, <4.0.0",
    "setuptools>=78.1.1",
    "testcontainers[clickhouse]>=4.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nmp"]


[tool.uv.sources]
nmp-common = { workspace = true }
nmp-testing = { workspace = true }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
