[project]
name = "nmp-platform-seed"
version = "0.0.1"
description = "Platform seed service and task - runs centralized seeding (guardrails, evaluator, data designer) after dependencies are ready"
readme = "README.md"
requires-python = ">=3.11,<3.15"

dependencies = [
  "nmp-common",
  "nmp-auth",
  "nmp-guardrails",
]

[project.scripts]
platform-seed = "nmp.platform_seed.__main__:main"

[tool.uv.sources]
nmp-common = { workspace = true }
nmp-auth = { workspace = true }
nmp-guardrails = { workspace = true }

[dependency-groups]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "nmp-testing",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nmp"]
