[project]
name = "nmp-rl"
version = "0.1.0"
description = "NeMo-RL task package — Ray DPO driver and compile glue. No HTTP server."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "nmp-common",
    "nmp-customization-common",
    "nemo-platform-plugin",
    "nemo-platform-sdk",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.6.1",
    "httpx>=0.27.0",
    "tenacity>=8.5.0",
]

# Heavy ML deps (nemo-rl, ray, megatron, etc.) are NOT declared here: they are
# provided by the published NGC NeMo-RL container (v0.6.0) that
# docker/Dockerfile.nmp-rl-base builds on, with the platform glue installed on
# top — exactly like the reference customizer. The package stays importable
# without them (compile.py + schemas), so plugin discovery and the compiler pay
# no install cost.
[project.optional-dependencies]
integrations = [
    "wandb>=0.25.1",
    "mlflow-skinny",
]

[project.scripts]
# Container entrypoints. Names match the automodel/unsloth pattern for parity.
nmp-rl-training = "nmp.rl.tasks.training.__main__:main"
nmp-rl-file-io = "nmp.rl.tasks.file_io.run:run"
nmp-rl-model-entity = "nmp.rl.tasks.model_entity.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nmp"]

[tool.uv.sources]
nmp-common = { workspace = true }
nmp-customization-common = { workspace = true }
nemo-platform-plugin = { workspace = true }
nemo-platform-sdk = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
