[project]
name = "nmp-studio"
version = "0.0.1"
description = "Studio service for serving NeMo Studio UI"
requires-python = ">=3.11,<3.15"

dependencies = [
  # API server dependencies
  "fastapi[standard]>=0.115.4",
  "uvicorn[standard]>=0.12.0",
  "nmp-common",
]

[project.scripts]
studio-server = "nmp.studio.main:run_standalone"

[tool.uv.sources]
nmp-common = { workspace = true }
nmp-testing = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.3.3", "nmp-testing"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nmp"]
