[project]
name = "nmp-unsloth"
version = "0.1.0"
description = "NeMo Unsloth task package — container SFT driver and compile glue. No HTTP server."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "nmp-common",
    "nemo-platform-sdk",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.6.1",
    "httpx>=0.27.0",
    "tenacity>=8.5.0",
]

# Heavy ML deps live behind an optional extra. The package itself is
# importable without these (e.g. compile.py + schemas), so the API
# process / plugin discovery doesn't pay the install cost. The extra is
# for the training container image and local development against train_sft.
[project.optional-dependencies]
# We deliberately don't pin transformers / trl / peft / accelerate / bitsandbytes
# here. Unsloth's own pyproject.toml has *precise* constraints for these
# (including explicit !=X.Y.Z blocklists for known-broken releases of
# transformers and trl), and the only reliable way to stay in step with them
# is to let the unsloth extra drive resolution. `unsloth[huggingface]` pulls
# `unsloth_zoo`, transformers, trl, peft, accelerate, datasets, sentence-
# transformers, torchvision, and triton automatically. The Dockerfile installs
# unsloth via its canonical `uv pip install unsloth --torch-backend=auto`
# command (per unsloth's README), so this extra is mainly for non-container
# callers that want a single-package handle.
unsloth = ["unsloth[huggingface]"]

[project.scripts]
# Container entrypoints. Each script matches the automodel name pattern for parity.
nmp-unsloth-training = "nmp.unsloth.tasks.training.__main__:main"
nmp-unsloth-file-io = "nmp.unsloth.tasks.file_io.run:run"
nmp-unsloth-model-entity = "nmp.unsloth.tasks.model_entity.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nmp"]

[tool.uv.sources]
nmp-common = { workspace = true }
nemo-platform-sdk = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
