[project]
name = "nemo-platform-sdk-tools"
description = "SDK and license maintenance tooling for NeMo Platform"
requires-python = ">=3.11,<3.15"

classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "caseutil>=0.7.2",
    "click>=8.2.0",
    "jinja2>=3.1.6",
    "libcst>=1.5.0",
    "nemo-platform-ext",
    "nemo-platform-sdk",
    "nmp-common",
    "packaging>=25.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.32.0",
    "rich>=14.1.0",
    "ruamel.yaml>=0.18.14",
    "tomlkit>=0.13.2",
    "typer>=0.19.2",
    "urllib3>=2.6.3",
]
version = "0.0.0"

[project.scripts]
nemo-platform-sdk-tools = "nemo_platform_sdk_tools.cli:app"

[tool.uv.sources]
nemo-platform-ext = { workspace = true }
nemo-platform-sdk = { workspace = true }
nmp-common = { workspace = true }


[dependency-groups]
test = [
    "pytest>=8.3.3",
    "pytest-mock>=3.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nemo_platform_sdk_tools"]
