[project]
name = "nmp-auth"
description = "Authentication and Authorization service for NeMo Platform"
requires-python = ">=3.11,<3.15"

dependencies = [
    # API server dependencies (for nmp-api/nmp-core containers)
    "fastapi[standard]>=0.115.4",
    "uvicorn[standard]>=0.12.0",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "nmp-common",
    "wasmtime>=20.0.0",
]
version = "0.0.0"

[project.scripts]
auth-server = "nmp.core.auth.main:run_standalone"

[tool.uv.sources]
nmp-common = { workspace = true }
nmp-testing = { workspace = true }


[dependency-groups]
# No task deps for auth - all deps are in main dependencies

dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.0",
  "nmp-testing",
  "ruamel.yaml>=0.18.0",
  "typer>=0.9.0",
  "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nmp"]


[tool.pytest.ini_options]
pythonpath = ["src"]
