[project]
name = "nmp-entities"
version = "0.1.0"
description = "Generic entity storage service with schema-agnostic design"
readme = "README.md"
requires-python = ">=3.11,<3.15"

dependencies = [
  # API server dependencies (for nmp-api/nmp-core containers)
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.23.0",
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.31.0",
  "psycopg2-binary>=2.9.10",
  "greenlet>=3.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "base58>=2.1.0",
  "nmp-common",
  "lark>=1.1.0",
  # MCP server dependencies
  "fastmcp>=3.2.0",  # GHSA-vv7q-7jx5-f767 (Critical) + GHSA-rww4-4w9c-7733 (High): fix in >=3.2.0
  "nemo-platform-sdk",
  "alembic>=1.13.1",
]

[project.scripts]
entities-server = "nmp.core.entities.main:run_standalone"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nmp"]

[tool.hatch.build.targets.wheel.force-include]
"alembic.ini" = "nmp/core/entities/alembic.ini"
"alembic" = "nmp/core/entities/alembic"

[dependency-groups]
# No task deps for entities - all deps are in main dependencies

dev = [
  "python-dotenv>=1.0.0",
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "httpx>=0.24.0",
  "ruff>=0.0.285",
  "pytest-mock>=3.14.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.uv.sources]
nmp-common = { workspace = true }
nemo-platform-sdk = { workspace = true }
