[project]
name = "nmp-files"
description = "NeMo Platform Files Service provides file management capabilities."
readme = "README.md"
requires-python = ">=3.11,<3.15"

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    # API server dependencies (for nmp-api/nmp-core containers)
    "fastapi>=0.115.8",
    "pydantic>=2.10.6",
    "uvicorn>=0.34.0",
    "pydantic-settings>=2.8.1",
    "pyyaml>=6.0.2",
    "nmp-common",
    "anyio>=4.0.0",
    "streaming-form-data>=1.19.1",
    "aiohttp>=3.14.1",
    "ngcsdk>=4.9.10",
    "duckdb>=1.1.3",
    "pandas>=1.5.3",
    "filesets",
    "opentelemetry-proto>=1.28.2",
    "aioboto3>=15.5.0",
    "types-aioboto3[s3]>=15.5.0",
]
version = "0.0.0"

[project.scripts]
files-server = "nmp.core.files.main:run_standalone"

[tool.uv.sources]
nmp-common = { workspace = true }
nmp-testing = { workspace = true }
filesets = { workspace = true }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nmp"]


[dependency-groups]
# No task deps for files - all deps are in main dependencies

dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.1",
    "ruff>=0.11.8",
    "ty>=0.0.1a14",
    "pytest-xdist>=3.8.0",
    "nmp-testing",
    "filesets",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
