[project]
name = "nmp-inference-gateway"
description = "NeMo Platform Inference Gateway provides a single API surface for all inference requests."
readme = "README.md"
requires-python = ">=3.11,<3.15"

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    # API server dependencies (for nmp-api/nmp-core containers)
    "fastapi>=0.115.8",
    "pydantic>=2.10.6",
    "uvicorn>=0.34.0",
    "pydantic-settings>=2.8.1",
    "pyyaml>=6.0.2",
    "nmp-common",
    "nemo-platform-plugin",
    "aiohttp[speedups]>=3.14.1",
]
version = "0.0.0"

[tool.uv.sources]
nmp-common = { workspace = true }
nemo-platform-plugin = { workspace = true }
nmp-testing = { workspace = true }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nmp"]


[dependency-groups]
# No task deps for inference-gateway - all deps are in main dependencies

dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.1",
    "ruff>=0.11.8",
    "ty>=0.0.1a14",
    "pytest-xdist>=3.8.0",
    "nmp-testing",
]

[tool.pytest.ini_options]
# testpaths = ["tests"]  # Commented to prevent namespace collision with root pytest
asyncio_mode = "auto"
