[project]
name = "nmp-jobs"
version = "0.1.0"
description = "NeMo Platform Jobs provides job execution capabilities."
readme = "README.md"
requires-python = ">=3.11,<3.15"

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    # API server dependencies (for nmp-api/nmp-core containers)
    "fastapi>=0.115.8",
    "pydantic>=2.10.6",
    "uvicorn>=0.34.0",
    "pydantic-settings>=2.8.1",
    "docker>=7.1.0",
    "kubernetes>=30.1.0",
    "sqlmodel>=0.0.22",
    "base58>=2.1.1",
    "pyyaml>=6.0.2",
    "hvac>=2.3.0",
    "nmp-common",
    "aiosqlite>=0.20.0",  # Required for SQLite async support
    "duckdb<2.0.0,>=1.1.3",
    "pandas>=1.5.3",
]

[project.scripts]
jobs-server = "nmp.core.jobs.main:run_standalone"

[tool.uv.sources]
nmp-common = { workspace = true }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nmp"]

[dependency-groups]
# No task deps for jobs - all deps are in main dependencies

dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "aiosqlite>=0.20.0",
    "ruff>=0.11.8",
    "ty>=0.0.1a14",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
# testpaths = ["tests"]  # Commented to prevent namespace collision with root pytest
asyncio_mode = "auto"
